// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render a default badge 1`] = `
<span
  class="ds-c-badge"
>
  Foo
</span>
`;

exports[`Badge should render a success badge 1`] = `
<span
  class="ds-c-badge ds-c-badge--success"
>
  <span
    class="ds-u-visibility--screen-reader"
  >
    Success
    : 
  </span>
  Foo
</span>
`;

exports[`Badge should render a warning badge 1`] = `
<span
  class="ds-c-badge ds-c-badge--warn"
>
  <span
    class="ds-u-visibility--screen-reader"
  >
    Warning
    : 
  </span>
  Foo
</span>
`;

exports[`Badge should render an alert badge 1`] = `
<span
  class="ds-c-badge ds-c-badge--alert"
>
  <span
    class="ds-u-visibility--screen-reader"
  >
    Alert
    : 
  </span>
  Foo
</span>
`;

exports[`Badge should render an info badge 1`] = `
<span
  class="ds-c-badge ds-c-badge--info"
>
  <span
    class="ds-u-visibility--screen-reader"
  >
    Notice
    : 
  </span>
  Foo
</span>
`;
